@@ -22,6 +22,8 @@ New features:
   * New schedulers modular-pheft, modular-prandom and modular-prandom-prio
   * Add STARPU_MATRIX_SET_NX/NY/LD and STARPU_VECTOR_SET_NX to change a matrix
     tile or vector size without reallocating the buffer.
+  * Application can change the allocation used by StarPU with
+    starpu_malloc_set_hooks()
 
 StarPU 1.3.0 (svn revision xxxx)
 ==============================================
